syntax = "proto3";
package com.f.java.nio.netty.protobufexample;
 
option java_package = "com.f.java.nio.netty.protobufexample";
option java_outer_classname = "AddressBookProtos";
 
message AddressBook {
    repeated Person person = 1;
}
 
message Person {
    string name = 1;
    int32 id = 2;
    string email = 3;
 
    enum PhoneType {
        MOBILE = 0;
        HOME = 1;
        WORK = 2;
    }
 
    message PhoneNumber {
        string number = 1;
        PhoneType type = 2;
    }
 
    repeated PhoneNumber phone = 4;
}
